--- a/src/Components/EventsComment/EventComment.module.scss
+++ b/src/Components/EventsComment/EventComment.module.scss
@@ -1,9 +1,7 @@
 .commentWrapper {
     padding: 2%;
-    article{
-        .comments{
-            padding-bottom: 2%;
-        }
+    .comments{
+        padding-bottom: 2%;
     }
 
     h3 {
@@ -13,7 +11,6 @@
 
 .postComment {
     background-color: #AD7A51;
-    // padding: 2%;
     padding: 2% 0%;
     .loginInfo {
         display: grid;
@@ -23,7 +20,6 @@
             p {
                 color: #FFFFFF;
                 font-size: 1.5vw;
-                // text-align: start;
             }
         }
     }
@@ -54,4 +50,77 @@
         margin-left: 1%;
     }
 
+}
+
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+// @media screen and (min-width: $x-large) {
+//     body {}
+// }
+
+// @media screen and (max-width: $large) {
+//     body {}
+// }
+
+@media screen and (max-width: $tablet) {
+    body {
+        .commentWrapper {
+            .comments{
+                p{
+                    font-size: 1.6vw;
+                }
+                h6{
+                    font-size: 1.6vw;
+                }
+            }
+        }       
+        .postComment {
+            .loginInfo {
+                div{
+                    p {
+                        font-size: 2vw;
+                    }
+                }
+            }
+        }   
+        .loginWrapper {        
+            p {
+                font-size: 1.5vw;
+            }        
+        }
+        
+    }
+}
+
+@media screen and (max-width: $mobile) {
+    body {
+        .commentWrapper {
+            .comments{
+                p{
+                    font-size: 2vw;
+                }
+                h6{
+                    font-size: 2vw;
+                }
+            }
+        }       
+        .postComment {
+            .loginInfo {
+                div{
+                    p {
+                        font-size: 2.5vw;
+                    }
+                }
+            }
+        }   
+        .loginWrapper {        
+            p {
+                font-size: 2.5vw;
+            }        
+        }
+    }
 }
