--- a/src/Components/Partials/BurgerMenu.scss
+++ b/src/Components/Partials/BurgerMenu.scss
@@ -1,20 +1,18 @@
 .burgerMenu {
     position: absolute;
     width: 25px;
-    height: 25px;
     right: 40px;
-    margin-top: -10%;
-
-    @media (width > 1199px) {
+    height: 25px;
+    top: 5%;
+    @media (width > 981px) {
         display: none;
     }
-
     .burgerMenuLine {
         position: absolute;
         width: 100%;
         height: 12%;
         //farve på brugermenu linjer
-        background-color: #707070;
+        background-color: black;
         transition: .2s ease-in-out;
 
         &:first-child {
@@ -39,13 +37,18 @@
     width: 25px;
     height: 25px;
     right: 40px;
-
+    z-index: 2;
+    top: 5%;
+    @media (width > 981px) {
+        display: none;
+    }
     .burgerMenuLine {
+
         position: absolute;
         width: 100%;
         height: 12%;
         //farve på luk krys
-        background-color: #707070;
+        background-color: black;
         transition: .2s ease-in-out;
 
         &:first-child {
@@ -65,7 +68,7 @@
             left: 0;
             transform: translateY(-50%) rotate(-45deg);
         }
-        
+
     }
 }
 
@@ -73,16 +76,36 @@
     display: none;
 }
 
+//burger menu nav link
 .activeMenu {
-    display: flex;
-    flex-direction: column;
     position: absolute;
-    list-style: none;
-    top: 5vh;
+    top: 13vh;
     width: 100%;
-    padding: 0 0 30px 40px;    
-    .navigationLinks {
-        text-decoration: none;
-        font-size: 1em;
+    left: 0;
+    text-align: end;
+    li {
+        display: inline-block;
+        padding-right: 2%;
+        a {
+            color: #707070;
+            font-size: 2.2vw;
+            &.active {
+                color: #D39D5B;
+            }
+            &:hover{
+                color: #D39D5B;
+            }
+        }
+    }
+    @media (width > 981px) {
+        display: none;
+    }
+    @media (width < 581px) {
+        li{
+            padding-right: 5%;
+            a{
+                font-size: 2.5vw;
+            }
+        }
     }
 }
