--- a/src/Components/Partials/Footer.scss
+++ b/src/Components/Partials/Footer.scss
@@ -32,3 +32,70 @@ footer{
         padding-left: 20%;
     }
 }
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+// @media screen and (min-width: $x-large) {
+//     body {}
+// }
+
+// @media screen and (max-width: $large) {
+//     body {}
+// }
+
+@media screen and (max-width: $tablet) {
+    body {
+        footer{
+            .infoWrapper{
+                article{
+                    h4{
+                        font-size: 1.6vw;
+                    }
+                    p{
+                        font-size: 1.5vw;
+                    }
+                    
+                    a{
+                        font-size: 1.5vw;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $mobile) {
+    body {
+        footer{
+            display: grid;
+            grid-template-columns: 1fr;
+            .infoWrapper{
+                padding-right: 1%;
+                article{
+                    h4{
+                        font-size: 2.3vw;
+                    }
+                    p{
+                        font-size: 2vw;
+                    }
+                    
+                    a{
+                        font-size: 2vw;
+                    }
+                }
+            }
+            .mediaWrapper{
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                padding-top: 5%;
+                padding-left: 1%;                
+                img{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
