--- a/src/Components/Partials/Header.scss
+++ b/src/Components/Partials/Header.scss
@@ -28,10 +28,21 @@ header{
                 
             }
         }
-        @media (width < 1199px) {
+        @media (width < 981px) {
             display: none;
         } 
 
+    }
+    .logoWrapper{
+        width: 35%;
+        margin-left: 1%;
+        img{
+            @media (width < 875px) {
+                width: 100%;
+                
+                
+            } 
+        }
     }
 
 }
