--- a/src/Components/Sites/Login/Login.module.scss
+++ b/src/Components/Sites/Login/Login.module.scss
@@ -56,3 +56,27 @@
     }
     
 }
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+@media screen and (max-width: $mobile) {
+  body{  
+    .loggedInWrapper{
+        .logOutWrapper{
+            top: -1%;
+            p{
+                font-size: 2.5vw;
+            }
+            .logoutBtn{
+                button{
+                    font-size: 2vw; 
+                }
+            }
+        }
+        
+    }   
+  }
+}
