--- a/src/Components/Sites/PerformancesAndEvents/EventList.scss
+++ b/src/Components/Sites/PerformancesAndEvents/EventList.scss
@@ -1,17 +1,21 @@
 @import '../../../App.scss';
-.eventListWrapper{
-    .headline{
+
+.eventListWrapper {
+    .headline {
         text-align: end;
         padding-bottom: 4%;
         margin-top: -2%;
     }
+
     .eventsWrapper {
         @include coloredThinBorder;
         margin-bottom: 2%;
+
         figure {
             display: grid;
             grid-template-columns: 15% 85%;
-            .imageWrapper{
+
+            .imageWrapper {
                 img {
                     @include coloredBigBorder;
                     padding: 0.3rem;
@@ -25,31 +29,36 @@
                 display: grid;
                 grid-template-areas: "infoWrapper placeWrapper btnWrapper";
                 gap: 2%;
-                .placeWrapper{
+
+                .placeWrapper {
                     grid-area: placeWrapper;
                     min-width: 25vw;
                     max-width: 25vw;
                     padding-top: 8%;
                     padding-left: 3%;
-                    hr{
+
+                    hr {
                         display: none;
                     }
 
                 }
-                .infoWrapper{
+
+                .infoWrapper {
                     grid-area: infoWrapper;
                     min-width: 12vw;
-                    max-width: 5vw;
+                    max-width: 12vw;
                     padding-top: 10%;
-                    h2{
+
+                    h2 {
                         font-size: 2vw;
                         padding-left: 1rem;
                     }
 
-                    h3{
+                    h3 {
                         display: none;
                     }
                 }
+
                 .btnWrapper {
                     grid-area: btnWrapper;
                     display: grid;
@@ -58,11 +67,12 @@
                     max-width: 17vw;
                     margin-top: 7%;
                     padding-top: 8%;
+
                     .readMore {
                         @include dackBlueBtn;
                         padding: 1rem;
                     }
-                    
+
                     .buyTicket {
                         @include orangeBtn;
                         padding: 1rem;
@@ -80,11 +90,11 @@ $tablet: 980px;
 $mobile: 580px;
 
 @media screen and (min-width: $x-large) {
-    body{
-        .eventListWrapper{
+    body {
+        .eventListWrapper {
             .eventsWrapper {
                 figure {
-                    .imageWrapper{
+                    .imageWrapper {
                         img {
                             height: 95%;
                         }
@@ -93,16 +103,90 @@ $mobile: 580px;
             }
         }
     }
-  }
-@media screen and (max-width: $large) {
-    body{
-    }
-  }
-@media screen and (max-width: $tablet) {
-  body{    
-  }
 }
-@media screen and (max-width: $mobile){
-    body{  
+
+// @media screen and (max-width: $large) {
+//     body{
+//     }
+//   }
+@media screen and (max-width: $tablet) {
+    body {
+        .eventListWrapper {
+            .eventsWrapper {
+                figure {
+                    figcaption {
+                        .placeWrapper {
+                            min-width: 34vw;
+                            max-width: 34vw;
+                        }
+                        .infoWrapper {
+                            h2 {
+                                font-size: 2.2vw;
+                            }
+                        }
+                        .btnWrapper {
+                            min-width: 25vw;
+                            max-width: 25vw;
+                            margin-top: 5%;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $mobile) {
+    body {
+        .eventListWrapper {        
+            .eventsWrapper {                
+                figure {
+                    width: 100%;
+                    display: grid;
+                    grid-template-columns: 1fr;
+        
+                    .imageWrapper {
+                        img {
+                            width: 98.5%;
+                            height: 100%;
+                        }
+                    }
+                    figcaption {        
+                        .placeWrapper {
+                            min-width: 25vw;
+                            max-width: 25vw;
+                            padding-top: 15%;
+                        }
+        
+                        .infoWrapper {
+                            min-width: 20vw;
+                            max-width: 20vw;
+                            padding-top: 15%;
+        
+                            h2 {
+                                font-size: 3vw;
+                                padding-left: 1rem;
+                            }
+                        }
+        
+                        .btnWrapper {
+                            min-width: 40vw;
+                            max-width: 40vw;
+                            padding-top: 5%;
+                            padding-bottom: 2%;        
+                            .readMore {
+                                padding: 0.8rem;
+                                margin-bottom: 5%;
+                            }
+        
+                            .buyTicket {
+                                padding: 0.8rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
